# GossipGuard-Rate-Limiter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  server_b.py  server_c.py
app/api/routes/: auth.py  internal.py  protected.py
app/core/: auth.py  config.py  security.py
app/mappings/: permissions.py
app/middleware/: rate_limit_middleware.py
app/models/: enums.py  rate_limit.py  user.py
app/repositories/: auth_repository.py  rate_limit_repository.py
app/services/: auth_service.py  gossip_service.py  rate_limit_service.py
frontend/: app.js  index.html  styles.css
tests/: test_permissions_and_routes.py  test_rate_limit_repository.py
