[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rate-limiting-gossip"
version = "0.1.0"
description = "Distributed FastAPI rate limiter with gossip sync and permission-based auth"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
