[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gossipguard-rate-limiter"
version = "0.1.0"
description = "Distributed FastAPI rate limiter with gossip sync and role-based auth"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "PyJWT>=2.8",
  "python-multipart>=0.0.9",
  "bcrypt>=4.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "frontend*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
